# aria-stream-replay

./: README.md  pyproject.toml  requirements.txt
conf/: config.yaml
conf/backend/: gaussian_slam.yaml
conf/map/: none.yaml
conf/replay/: oracle_frustum.yaml  raw.yaml  raw_odom.yaml
conf/source/: vrs.yaml
conf/transport/: zmq.yaml
src/aria_stream_replay/: cli.py  event_types.py  main.py
src/aria_stream_replay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aria_stream_replay/core/: frustum_culler.py  replay_clock.py
src/aria_stream_replay/dataio/: mps_reader.py  vrs_reader.py
src/aria_stream_replay/transport/: zmq_pub.py
tests/: test_frustum_culler.py  test_sub.py
